--- a/pom.xml
+++ b/pom.xml
@@ -180,12 +180,22 @@
 					<artifactId>netty-codec-http</artifactId>
 				</exclusion>
 
+				<exclusion>
+					<groupId>io.netty</groupId>
+					<artifactId>netty-handler</artifactId>
+				</exclusion>
 			</exclusions>
 		</dependency>
 
 		<dependency>
 			<groupId>io.netty</groupId>
 			<artifactId>netty-codec-http</artifactId>
+			<version>5.0.0.Alpha2</version>
+		</dependency>
+
+		<dependency>
+			<groupId>io.netty</groupId>
+			<artifactId>netty-handler</artifactId>
 			<version>5.0.0.Alpha2</version>
 		</dependency>
 		<dependency>
