--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -12,6 +12,7 @@ logging:
     org.springframework.web.client.RestTemplate: WARN
     org.apache.http: WARN
     uk.gov.crowncommercial.dts.scale.cat: DEBUG
+    # org.hibernate.SQL: DEBUG
     # org.eclipse.jetty.client: DEBUG
 
 
@@ -20,6 +21,9 @@ spring:
     open-in-view: false
     database: postgresql
     show-sql: false
+    properties:
+      hibernate:
+        format_sql: false
     hibernate:
       ddl-auto: validate
   datasource:
