--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -66,7 +66,12 @@ config:
       - zip
     maxSize: 314572800 #300MB
     maxTotalSize: 1073741824 #1GB
-
+  auth:
+    apikey:
+      header: x-api-key
+#      key: "SET IN ENV"  
+      authorities: ESOURCING  
+  
   external:
     jaggaer:
 #      baseUrl: "SET IN ENV"
