--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -89,10 +89,9 @@ config:
         source-template-reference-code: project_609
         open-market-template-id: itt_747
         sta-template-id: itt_746
-        buyer-company-id: 51435             # TODO: this ID is CCS
-        conclave-org-id: 669821636384259971 # TODO: this ID is CCS
-        jaggaer-user-id: 110659             # TODO: this ID is peter.simpson@roweit.co.uk
-        cas-org-id: GB-COH-05684804         # TODO: this ID is CCS
+        buyer-company-id: 51435             # TODO: put in SSM?
+        conclave-org-id: 669821636384259971 # TODO: put in SSM?
+        jaggaer-user-id: 110659             # TODO: put in SSM?
       rfxStatusToTenderStatus:
         0: PLANNED
         100: PLANNED
