--- a/src/test/resources/application-test.yml
+++ b/src/test/resources/application-test.yml
@@ -14,4 +14,7 @@ config:
     jaggaer:
       rpa: 
         encryptionIv: hjnhgy8k*A?(7y-K
-        encryptionKey: uikjnsh657*y%hD*G-KaPdS*kij#3s6v  
+        encryptionKey: uikjnsh657*y%hD*G-KaPdS*kij#3s6v
+      self-service-id: 52423
+      assisted-procurement-id: 51435
+      assisted-procurement-org-id: 1
