--- a/src/test/resources/application-test.yml
+++ b/src/test/resources/application-test.yml
@@ -15,3 +15,5 @@ config:
       rpa: 
         encryptionIv: hjnhgy8k*A?(7y-K
         encryptionKey: uikjnsh657*y%hD*G-KaPdS*kij#3s6v  
+      esourcing:
+        principal-email: jsmith@ccs.org.uk
