--- a/pom.xml
+++ b/pom.xml
@@ -36,6 +36,8 @@
 		<spring-security-web.version>5.8.3</spring-security-web.version>
 		<hsql.version>2.7.1</hsql.version>
 		<spring-security-core.version>5.8.3</spring-security-core.version>
+		<rollbar.version>1.10.0</rollbar.version>
+		<jsoup.version>1.16.1</jsoup.version>
 	</properties>
 
 	<dependencies>
@@ -304,7 +306,14 @@
 		<dependency>
 			<groupId>com.rollbar</groupId>
 			<artifactId>rollbar-logback</artifactId>
-			<version>1.10.0</version>
+			<version>${rollbar.version}</version>
+		</dependency>
+
+		<!-- https://mvnrepository.com/artifact/org.jsoup/jsoup -->
+		<dependency>
+			<groupId>org.jsoup</groupId>
+			<artifactId>jsoup</artifactId>
+			<version>${jsoup.version}</version>
 		</dependency>
 	</dependencies>
 
