--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.7.11</version>
+		<version>3.1.0</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>uk.gov.crowncommercial.dts</groupId>
@@ -32,12 +32,11 @@
 		<poi-ooxml.version>5.2.3</poi-ooxml.version>
 		<xerces.xercesimpl.version>2.12.2</xerces.xercesimpl.version>
 		<snakeyaml.version>2.0</snakeyaml.version>
-		<spring-security-oauth2-client.version>5.8.3</spring-security-oauth2-client.version>
-		<spring-security-web.version>5.8.3</spring-security-web.version>
+		<spring-security.version>6.1.0</spring-security.version>
 		<hsql.version>2.7.2</hsql.version>
-		<spring-security-core.version>5.8.3</spring-security-core.version>
 		<rollbar.version>1.10.0</rollbar.version>
 		<jsoup.version>1.16.1</jsoup.version>
+		<jackson.version>2.15.0</jackson.version>
 	</properties>
 
 	<dependencies>
@@ -53,13 +52,12 @@
 		<dependency>
 			<groupId>org.springframework.security</groupId>
 			<artifactId>spring-security-core</artifactId>
-			<version>${spring-security-core.version}</version>
+			<version>${spring-security.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-cache</artifactId>
 		</dependency>
-
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
@@ -91,7 +89,6 @@
 					<groupId>org.springframework.security</groupId>
 				</exclusion>
 			</exclusions>
-
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -150,13 +147,11 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
-		<!-- New Dependencies -->
 		<dependency>
 			<groupId>org.yaml</groupId>
 			<artifactId>snakeyaml</artifactId>
 			<version>${snakeyaml.version}</version>
 		</dependency>
-
 		<dependency>
 			<groupId>com.vladmihalcea</groupId>
 			<artifactId>hibernate-types-52</artifactId>
@@ -203,7 +198,6 @@
 			<artifactId>commons-io</artifactId>
 			<version>${commons-io.version}</version>
 		</dependency>
-
 		<dependency>
 		    <groupId>uk.gov.service.notify</groupId>
 		    <artifactId>notifications-java-client</artifactId>
@@ -212,39 +206,32 @@
 		<dependency>
 			<groupId>com.fasterxml.jackson.datatype</groupId>
 			<artifactId>jackson-datatype-jsr310</artifactId>
-			<version>2.15.0</version>
+			<version>${jackson.version}</version>
 		</dependency>
-
-		<!-- Snyk recommended -->
 		<dependency>
 			<groupId>org.apache.jena</groupId>
 			<artifactId>jena-core</artifactId>
 			<version>${jena-core.version}</version>
 		</dependency>
-
 		<dependency>
 			<groupId>com.jayway.jsonpath</groupId>
 			<artifactId>json-path</artifactId>
 		</dependency>
-
 		<dependency>
 			<groupId>com.amazonaws</groupId>
 			<artifactId>aws-java-sdk-s3</artifactId>
 			<version>${aws-java-sdk-s3.version}</version>
 		</dependency>
-
 		<dependency>
 			<groupId>org.apache.tika</groupId>
 			<artifactId>tika-core</artifactId>
 			<version>${tika-core.version}</version>
 		</dependency>
-
 		<dependency>
 			<groupId>org.apache.poi</groupId>
 			<artifactId>poi-ooxml</artifactId>
 			<version>${poi-ooxml.version}</version>
 		</dependency>
-
 		<dependency>
 			<groupId>xerces</groupId>
 			<artifactId>xercesImpl</artifactId>
@@ -253,7 +240,7 @@
 		<dependency>
 			<groupId>org.springframework.security</groupId>
 			<artifactId>spring-security-oauth2-client</artifactId>
-			<version>${spring-security-oauth2-client.version}</version>
+			<version>${spring-security.version}</version>
 			<exclusions>
 				<exclusion>
 					<artifactId>spring-security-core</artifactId>
@@ -264,7 +251,7 @@
 		<dependency>
 			<groupId>org.springframework.security</groupId>
 			<artifactId>spring-security-web</artifactId>
-			<version>${spring-security-web.version}</version>
+			<version>${spring-security.version}</version>
 			<exclusions>
 				<exclusion>
 					<artifactId>spring-security-core</artifactId>
@@ -272,8 +259,6 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
-
-		<!-- Test dependencies -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
@@ -301,15 +286,11 @@
 			<artifactId>junit-jupiter-params</artifactId>
 			<scope>test</scope>
 		</dependency>
-		
-		<!-- https://mvnrepository.com/artifact/com.rollbar/rollbar-logback -->
 		<dependency>
 			<groupId>com.rollbar</groupId>
 			<artifactId>rollbar-logback</artifactId>
 			<version>${rollbar.version}</version>
 		</dependency>
-
-		<!-- https://mvnrepository.com/artifact/org.jsoup/jsoup -->
 		<dependency>
 			<groupId>org.jsoup</groupId>
 			<artifactId>jsoup</artifactId>
