Fix the legacy validation errors generated files produce from the upgrade

--- a/pom.xml
+++ b/pom.xml
@@ -331,7 +331,7 @@
 							<verbose>false</verbose>
 							<configOptions>
 								<sourceFolder>src/gen/java/main</sourceFolder>
-								<useBeanValidation>true</useBeanValidation>
+								<useBeanValidation>false</useBeanValidation>
 								<performBeanValidation>true</performBeanValidation>
 								<dateLibrary>java8</dateLibrary>
 								<hideGenerationTimestamp>true</hideGenerationTimestamp>
@@ -361,7 +361,7 @@
 							<verbose>false</verbose>
 							<configOptions>
 								<sourceFolder>src/gen/java/main</sourceFolder>
-								<useBeanValidation>true</useBeanValidation>
+								<useBeanValidation>false</useBeanValidation>
 								<performBeanValidation>true</performBeanValidation>
 								<dateLibrary>java8</dateLibrary>
 								<hideGenerationTimestamp>true</hideGenerationTimestamp>
@@ -391,7 +391,7 @@
 							<verbose>false</verbose>
 							<configOptions>
 								<sourceFolder>src/gen/java/main</sourceFolder>
-								<useBeanValidation>true</useBeanValidation>
+								<useBeanValidation>false</useBeanValidation>
 								<performBeanValidation>true</performBeanValidation>
 								<dateLibrary>java8</dateLibrary>
 								<hideGenerationTimestamp>true</hideGenerationTimestamp>
@@ -423,7 +423,7 @@
 							<verbose>false</verbose>
 							<configOptions>
 								<sourceFolder>src/gen/java/main</sourceFolder>
-								<useBeanValidation>true</useBeanValidation>
+								<useBeanValidation>false</useBeanValidation>
 								<performBeanValidation>true</performBeanValidation>
 								<dateLibrary>java8</dateLibrary>
 								<hideGenerationTimestamp>true</hideGenerationTimestamp>
