--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,7 @@
         <jackson.version>2.15.2</jackson.version>
         <hibernate.version>6.1.7.Final</hibernate.version>
         <junit.version>5.9.3</junit.version>
+        <opensearch.version>1.1.0</opensearch.version>
     </properties>
 
     <dependencies>
@@ -303,6 +304,11 @@
             <groupId>org.jsoup</groupId>
             <artifactId>jsoup</artifactId>
             <version>${jsoup.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.opensearch.client</groupId>
+            <artifactId>spring-data-opensearch-starter</artifactId>
+            <version>${opensearch.version}</version>
         </dependency>
     </dependencies>
 
