--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -70,8 +70,16 @@ config:
       - zip
     maxSize: 314572800 #300MB
     maxTotalSize: 1073741824 #1GB
-
+    
   external:
+#   s3:
+#     oppertunities:
+#       ui:
+#         link: SET IN ENV"
+#       schedule: SET IN ENV"
+#   projects:
+#     sync:
+#       schedule: SET IN ENV"
     jaggaer:
 #      baseUrl: "SET IN ENV"
       timeoutDuration: 300
