--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,7 @@
         <hibernate.version>6.1.7.Final</hibernate.version>
         <junit.version>5.9.3</junit.version>
         <opensearch.version>1.2.0</opensearch.version>
+        <shedlock.version>2.1.0</shedlock.version>
     </properties>
 
     <dependencies>
@@ -309,6 +310,16 @@
             <groupId>org.opensearch.client</groupId>
             <artifactId>spring-data-opensearch-starter</artifactId>
             <version>${opensearch.version}</version>
+        </dependency>
+		<dependency>
+            <groupId>net.javacrumbs.shedlock</groupId>
+            <artifactId>shedlock-spring</artifactId>
+            <version>${shedlock.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>net.javacrumbs.shedlock</groupId>
+            <artifactId>shedlock-provider-jdbc-template</artifactId>
+            <version>${shedlock.version}</version>
         </dependency>
     </dependencies>
 
