--- a/pom.xml
+++ b/pom.xml
@@ -368,12 +368,72 @@
                         </configuration>
                     </execution>
                     <execution>
-                        <id>conclave-wrapper-api</id>
+                        <id>conclave-wrapper-user-profile-api</id>
                         <goals>
                             <goal>generate</goal>
                         </goals>
                         <configuration>
-                            <inputSpec>https://tst.api.crowncommercial.gov.uk/user-profiles/swagger/v1/swagger.json</inputSpec>
+                            <inputSpec>https://tst.api.crowncommercial.gov.uk/user-profile/swagger/v1/swagger.json</inputSpec>
+                            <generatorName>spring</generatorName>
+                            <generateModels>true</generateModels>
+                            <generateSupportingFiles>false</generateSupportingFiles>
+                            <generateApis>false</generateApis>
+                            <generateModelTests>false</generateModelTests>
+                            <modelPackage>uk.gov.crowncommercial.dts.scale.cat.model.conclave-wrapper.generated</modelPackage>
+                            <skipValidateSpec>false</skipValidateSpec>
+                            <strictSpec>true</strictSpec>
+                            <importMappings>Error=uk.gov.crowncommercial.dts.scale.cat.model.ApiError</importMappings>
+                            <verbose>false</verbose>
+                            <configOptions>
+                                <sourceFolder>src/gen/java/main</sourceFolder>
+                                <useBeanValidation>true</useBeanValidation>
+                                <performBeanValidation>true</performBeanValidation>
+                                <dateLibrary>java8</dateLibrary>
+                                <hideGenerationTimestamp>true</hideGenerationTimestamp>
+                                <openApiNullable>false</openApiNullable>
+                                <useOptional>true</useOptional>
+                                <useJakartaEe>true</useJakartaEe>
+                                <useSpringBoot3>true</useSpringBoot3>
+                            </configOptions>
+                        </configuration>
+                    </execution>
+                    <execution>
+                        <id>conclave-wrapper-organisation-profile-api</id>
+                        <goals>
+                            <goal>generate</goal>
+                        </goals>
+                        <configuration>
+                            <inputSpec>https://tst.api.crowncommercial.gov.uk/organisation-profile/swagger/v1/swagger.json</inputSpec>
+                            <generatorName>spring</generatorName>
+                            <generateModels>true</generateModels>
+                            <generateSupportingFiles>false</generateSupportingFiles>
+                            <generateApis>false</generateApis>
+                            <generateModelTests>false</generateModelTests>
+                            <modelPackage>uk.gov.crowncommercial.dts.scale.cat.model.conclave-wrapper.generated</modelPackage>
+                            <skipValidateSpec>false</skipValidateSpec>
+                            <strictSpec>true</strictSpec>
+                            <importMappings>Error=uk.gov.crowncommercial.dts.scale.cat.model.ApiError</importMappings>
+                            <verbose>false</verbose>
+                            <configOptions>
+                                <sourceFolder>src/gen/java/main</sourceFolder>
+                                <useBeanValidation>true</useBeanValidation>
+                                <performBeanValidation>true</performBeanValidation>
+                                <dateLibrary>java8</dateLibrary>
+                                <hideGenerationTimestamp>true</hideGenerationTimestamp>
+                                <openApiNullable>false</openApiNullable>
+                                <useOptional>true</useOptional>
+                                <useJakartaEe>true</useJakartaEe>
+                                <useSpringBoot3>true</useSpringBoot3>
+                            </configOptions>
+                        </configuration>
+                    </execution>
+                    <execution>
+                        <id>conclave-wrapper-contact-service-api</id>
+                        <goals>
+                            <goal>generate</goal>
+                        </goals>
+                        <configuration>
+                            <inputSpec>https://tst.api.crowncommercial.gov.uk/contact-service/swagger/v1/swagger.json</inputSpec>
                             <generatorName>spring</generatorName>
                             <generateModels>true</generateModels>
                             <generateSupportingFiles>false</generateSupportingFiles>
