Create Project and RFX Template IDs now need to be supplied differently to the app

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -166,11 +166,12 @@ config:
           DA:
             CANCELLED
 
+      #createProjectTemplateId: "SET IN ENV"
+      #createRfxTemplateId: "SET IN ENV"
       createProject:
         # CA-Lot-BuyerOrg e.g. RM1234-Lot1a-CCS
         defaultTitleFormat: "%s-%s-%s"
         endpoint: /esop/jint/api/public/ja/v1/projects
-#       templateId: "SET IN ENV"
       getProject:
         endpoint: /esop/jint/api/public/ja/v1/projects/{id}
       getProjectList:
@@ -179,7 +180,6 @@ config:
         # ProjectName-EventType e.g. RM1234-Lot1a-CCS-RFP
         defaultTitleFormat: "%s-%s"
         endpoint: /esop/jint/api/public/ja/v1/rfxs/
-#       templateId: "SET IN ENV"
         
       # TODO / NB: Search via SSO data directly only works for super users (i.e. suppliers)
       getBuyerCompanyProfile:
