--- a/src/test/resources/application-test.yml
+++ b/src/test/resources/application-test.yml
@@ -12,6 +12,9 @@ config:
     maxAttempts: 3
   external:
     jaggaer:
+      createProjectTemplateId: tender_49
+      createRfxTemplateId: itt_9899
       rpa: 
         encryptionIv: hjnhgy8k*A?(7y-K
-        encryptionKey: uikjnsh657*y%hD*G-KaPdS*kij#3s6v  
+        encryptionKey: uikjnsh657*y%hD*G-KaPdS*kij#3s6v
+
