[GMTRP-159] Use SSO email to validate the user for merge accounts

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -322,6 +322,7 @@ config:
   flags:
     # Prod env set to true
     resolveUsersBySSO: true
+    resolveBuyerUsersBySSO: true
     # devMode: "SET IN ENV"
 ---
 spring:
