--- a/pom.xml
+++ b/pom.xml
@@ -25,10 +25,10 @@
         <simple-odf.version>0.9.0</simple-odf.version>
         <jena-core.version>4.10.0</jena-core.version>
         <commons-io.version>2.15.1</commons-io.version>
-        <aws-java-sdk-s3.version>1.12.629</aws-java-sdk-s3.version>
+        <aws-java-sdk-s3.version>1.12.647</aws-java-sdk-s3.version>
         <tika-core.version>2.9.1</tika-core.version>
         <java-cfenv-boot.version>3.1.3</java-cfenv-boot.version>
-        <notifications-java-client.version>4.1.0-RELEASE</notifications-java-client.version>
+        <notifications-java-client.version>4.1.1-RELEASE</notifications-java-client.version>
         <poi-ooxml.version>5.2.5</poi-ooxml.version>
         <xerces.xercesimpl.version>2.12.2</xerces.xercesimpl.version>
         <snakeyaml.version>2.2</snakeyaml.version>
@@ -41,7 +41,7 @@
         <junit.version>5.9.3</junit.version>
         <opensearch.version>1.2.1</opensearch.version>
         <shedlock.version>5.10.0</shedlock.version>
-        <spring-boot.version>3.1.6</spring-boot.version>
+        <spring-boot.version>3.2.2</spring-boot.version>
     </properties>
 
     <dependencies>
@@ -224,14 +224,22 @@
             <artifactId>notifications-java-client</artifactId>
             <version>${notifications-java-client.version}</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/org.bitbucket.b_c/jose4j -->
+        <dependency>
+            <groupId>org.bitbucket.b_c</groupId>
+            <artifactId>jose4j</artifactId>
+            <version>0.9.4</version>
+        </dependency>
         <dependency>
             <groupId>org.apache.jena</groupId>
             <artifactId>jena-core</artifactId>
             <version>${jena-core.version}</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/com.jayway.jsonpath/json-path -->
         <dependency>
             <groupId>com.jayway.jsonpath</groupId>
             <artifactId>json-path</artifactId>
+            <version>2.9.0</version>
         </dependency>
         <dependency>
             <groupId>com.amazonaws</groupId>
@@ -306,6 +314,19 @@
             <groupId>com.rollbar</groupId>
             <artifactId>rollbar-logback</artifactId>
             <version>${rollbar.version}</version>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/ch.qos.logback/logback-classic -->
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+            <version>1.4.14</version>
+            <scope>test</scope>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/ch.qos.logback/logback-core -->
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-core</artifactId>
+            <version>1.4.14</version>
         </dependency>
         <dependency>
             <groupId>org.jsoup</groupId>
