--- a/pom.xml
+++ b/pom.xml
@@ -46,9 +46,15 @@
         <jsonpath.version>2.9.0</jsonpath.version>
         <logback.version>1.5.6</logback.version>
         <feignclient.version>4.1.3</feignclient.version>
+        <ehcache.version>3.10.8</ehcache.version>
     </properties>
 
     <dependencies>
+        <dependency>
+            <groupId>org.ehcache</groupId>
+            <artifactId>ehcache</artifactId>
+            <version>${ehcache.version}</version>
+        </dependency>
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-openfeign</artifactId>
