--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -36,6 +36,17 @@ logging:
     org.springframework.web.client.RestTemplate: WARN
     org.apache.http: WARN
 
+# ehCache config
+caching:
+  # Primary cache - 5 mins, 500 entries
+  primary:
+    cacheLength: 300
+    heapSize: 500
+  # Long cache - 1 hour, 500 entries
+  long:
+    cacheLength: 3600
+    heapSize: 500
+
 spring:
   jpa:
     open-in-view: false
