--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -46,7 +46,7 @@ caching:
   long:
     cacheLength: 3600
     heapSize: 500
-  agreements: RM1557.13,RM1043.8,RM6187
+  agreements: RM1557.13,RM1043.8,RM6187,RM1557.14
 
 spring:
   jpa:
