Further progress.  Make sure all the dependencies use the configured versions.  There's still a few tests failing that need fixing though

--- a/src/test/resources/application-test.yml
+++ b/src/test/resources/application-test.yml
@@ -11,6 +11,8 @@ config:
   retry:
     maxAttempts: 3
   external:
+    agreementsService:
+      baseUrl: https://dummy.example.com
     jaggaer:
       rpa: 
         encryptionIv: hjnhgy8k*A?(7y-K
