--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -5,7 +5,7 @@ on:
 
 jobs:
   unit-test:
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
 
     steps:
       - name: Checkout code
@@ -16,7 +16,7 @@ jobs:
         with:
           java-version: '23'
           distribution: 'temurin'
-          cache: 'maven'
+          cache: maven
 
       - name: Build with Maven
         run: mvn --batch-mode --update-snapshots verify
