--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -19,4 +19,4 @@ jobs:
           cache: maven
 
       - name: Build with Maven
-        run: mvn --batch-mode --update-snapshots verify
+        run: mvn -B package --file pom.xml
